# az-sync

./: .gitignore  az.py  az.spec  pyproject.toml
src/az_sync/: __init__.py  cli.py  core.py  utils.py
src/az_sync/sql/: create_tables.sql  insert_metadata.sql  insert_record.sql
