[project]
name = "az-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yibo Wei", email = "david_wyb2001@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "rich>=14.0.0",
    "typer>=0.15.2",
]

[project.scripts]
az-sync = "az_sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
